--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href="pretty_port.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Orbitron:900' rel='stylesheet' type='text/css'>  
+
   <script src="http://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/EasePack.min.js"></script>
   <script src="http://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/rAF.js"></script>
   <script src="http://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/TweenLite.min.js"></script>
@@ -20,7 +21,7 @@
 
       <div id="large-header" class="large-header">
         <canvas id="demo-canvas"></canvas>
-        <h1 class="main-title">Manuel Huerta</h1>
+        <h1 class="main-title">MANUEL HUERTA</h1>
          <h2 class="main-title job-title">Web Developer</h2>
 
         <script src="headerAnimation.js"></script>
@@ -33,27 +34,27 @@
     <section id="skills"><center>
       <h2>What I Know</h2>
       <ul style="padding-left: 0px;">
-        <li><img src="icons/ruby.png" alt="Ruby" style="height:90px"></li>
-        <li><img src="icons/icon_rails.png" alt="Rails" style="height:80px"></li>
-        <li><img src="icons/js.png" alt="Javascript" style="height:80px"></li>
-        <li><img src="icons/HTML5.png" alt="HTML5" style="height:80px"></li>
-        <li><img src="icons/css3.png" alt="CSS3" style="height:80px"></li>
+        <li><img src="icons/ruby.png" alt="Ruby" style="height:120px"></li>
+        <li><img src="icons/icon_rails.png" alt="Rails" style="height:110px"></li>
+        <li><img src="icons/js.png" alt="Javascript" style="height:110px"></li>
+        <li><img src="icons/HTML5.png" alt="HTML5" style="height:110px"></li>
+        <li><img src="icons/css3.png" alt="CSS3" style="height:110px"></li>
       </ul>
     </section>
 
     <section id="projects"><center>
       <h2>Projects</h2>
       <ul><center>
-        <li><img class="img-circle" src=" bomb.png" alt="Profile Picture" style="height:175px"></li>
-        <li><img class="img-circle" src=" crit.png" alt="Profile Picture" style="height:175px"></li>
-        <li><img class="img-circle" src=" equest.png" alt="Profile Picture" style="height:175px"></li>
-      </ul></center>
+        <li><img class="project-circle" src=" bomb.png" alt="Profile Picture" style="height:190px"></li>
+        <li><img class="project-circle" src=" crit.png" alt="Profile Picture" style="height:190px"></li>
+        <li><img class="project-circle" src=" equest.png" alt="Profile Picture" style="height:190px"></li>
+      </ul>
     </section>
 
     <section id="about">
 
       <div id="aboutMe">
-        <div id="picture"><img class="img-circle" src=" Profile_pic.jpg" alt="Profile Picture" style="height:250px"></div>
+        <div id="picture"><img class="img-circle" src=" Profile_pic.jpg" alt="Profile Picture" style="height:240px"></div>
 
         <h2>About me</h2>
 
@@ -76,7 +77,7 @@
         <a href="mailto:huerta.a.manuel@gmail.com"></a><button class="button" style="vertical-align:middle">EMAIL ME<span class="fa fa-angle-double-right"></span></button>
       </div>
 
-      <p style="padding-bottom: 25px; margin-bottom: 0px;">Call or Text: (954) 670-4118</p>
+      <p style="padding-bottom: 25px; margin-bottom: 0px; font-size: 20px;">Call or Text: (954) 670-4118</p>
      </footer>
    </main>
 
