--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
 	<title>Manny Dev</title>
 	<link rel="shortcut icon" type="image/png" href="favicon.ico"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 	<link href="pretty_port.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Orbitron:900' rel='stylesheet' type='text/css'>  
