--- a/portfolio.html
+++ b/portfolio.html
@@ -20,15 +20,15 @@
 	<main>
     <header>
 
+
       <div id="large-header" class="large-header">
         <canvas id="demo-canvas"></canvas>
         <h1 class="main-title">MANUEL HUERTA</h1>
          <h2 class="main-title job-title">Web Developer</h2>
+         <i class="fa fa-angle-down down-arrow"></i>
 
         <script src="headerAnimation.js"></script>
-
       </div>
-      
 
     </header>
 
@@ -46,22 +46,23 @@
     <section id="projects"><center>
       <h2>Projects</h2>
       <ul><center>
-        <li><img class="project-circle" src=" bomb.png" alt="Profile Picture" style="height:190px"></li>
-        <li><img class="project-circle" src=" crit.png" alt="Profile Picture" style="height:190px"></li>
-        <li><img class="project-circle" src=" equest.png" alt="Profile Picture" style="height:190px"></li>
+        <li><a href="https://ba-bomb.herokuapp.com/"><img class="project-circle" src=" bomb.png" alt="Profile Picture" style="height:190px">Bomb</a></li>
+        <li><a href="https://github.com/mhuerta23/Review-Site"><img class="project-circle" src=" crit.png" alt="Profile Picture" style="height:190px">Critical Hit</a></li>
+        <li><a href="http://www.equestnow.co/"><img class="project-circle" src=" equest.png" alt="Profile Picture" style="height:190px">EquestNOW</a></li>
       </ul>
     </section>
 
     <section id="about">
 
       <div id="aboutMe">
-        <div id="picture"><img class="img-circle" src=" Profile_pic.jpg" alt="Profile Picture" style="height:240px"></div>
+
+        <div id="picture"><img class="img-circle" src=" Profile_pic.jpg" alt="Profile Picture" style="height:300px"></div>
 
         <h2>About me</h2>
 
-        <p style="margin-left: 90px; margin-right: 100px;">Hi my name is Manuel Huerta a.k.a. Manny, I'm a student at Wyncode Academy. Sharing information and computer development are my passions. I was born in Caracas, Venezuela but was raised in South Florida since the age of five. I have loved technology all my life. Since my first Nintendo, I fell in love with technology and have never gotten over it. My previous work experience includes Gamestop. I also have a lot of experience in education. I taught at at Renaissance Charter School, where I saw first hand the incredible power that web development can have at shaping the young minds of the future. After that I had a chance to teach Nova Southeastern University Preschool. At Baudhuin Preschool we did research and development for children living with autism. There I was exposed to the technologies that are now facilitating the development of autistic minds, such as robot helpers that teach children conventional facial expressions and their meaning.</p>
+        <p>Hi my name is Manuel Huerta a.k.a. Manny, I'm a almuni at Wyncode Academy. Sharing information and computer development are my passions. I was born in Caracas, Venezuela but was raised in South Florida since the age of five. I have loved technology all my life. Since my first Nintendo, I fell in love with technology and have never gotten over it. My previous work experience includes Gamestop. I also have a lot of experience in education. I taught at at Renaissance Charter School, where I saw first hand the incredible power that web development can have at shaping the young minds of the future. After that I had a chance to teach Nova Southeastern University Preschool. At Baudhuin Preschool we did research and development for children living with autism. There I was exposed to the technologies that are now facilitating the development of autistic minds, such as robot helpers that teach children conventional facial expressions and their meaning.</p>
 
-        <p style="margin-bottom: 0px;">At Wyncode Academy I learned Ruby, and by association Ruby on Rails, JavaScript, HTML, and CSS. Being in Wyncode has allowed me to sponge the knowledge and tactics of talented people and guided my development as a web development professional. Upon finishing my cohort here, I aim to have the ability to make a significant contribution on the global platform. With my background in in education, I think that I can find creative and effective ways to give back to the community.</p>
+        <p>At Wyncode Academy I learned Ruby, and by association Ruby on Rails, JavaScript, HTML, and CSS. Being in Wyncode has allowed me to sponge the knowledge and tactics of talented people and guided my development as a web development professional. Upon finishing my cohort here, I aim to have the ability to make a significant contribution on the global platform. With my background in in education, I think that I can find creative and effective ways to give back to the community.</p>
       </div>
     </section>
 
@@ -79,6 +80,7 @@
       </div>
 
       <p style="padding-bottom: 25px; margin-bottom: 0px; font-size: 20px;">Call or Text: (954) 670-4118</p>
+      <script src="headerAnimation.js"></script>
      </footer>
    </main>
 
