--- a/portfolio.html
+++ b/portfolio.html
@@ -46,10 +46,11 @@
     <section id="projects"><center>
       <h2>Projects</h2>
       <ul><center>
-        <li><a href="https://ba-bomb.herokuapp.com/"><img class="project-circle" src=" bomb.png" alt="Profile Picture" style="height:190px">Bomb</a></li>
-        <li><a href="https://github.com/mhuerta23/Review-Site"><img class="project-circle" src=" crit.png" alt="Profile Picture" style="height:190px">Critical Hit</a></li>
-        <li><a href="http://www.equestnow.co/"><img class="project-circle" src=" equest.png" alt="Profile Picture" style="height:190px">EquestNOW</a></li>
+        <li><a href="https://ba-bomb.herokuapp.com/"><img class="project-circle" src=" bomb.png" alt="Profile Picture" style="height:190px"></a></li>
+        <li><a href="https://github.com/mhuerta23/Review-Site"><img class="project-circle" src=" crit.png" alt="Profile Picture" style="height:190px"></a></li>
+        <li><a href="http://www.equestnow.co/"><img class="project-circle" src=" equest.png" alt="Profile Picture" style="height:190px"></a></li>
       </ul>
+
     </section>
 
     <section id="about">
@@ -80,7 +81,6 @@
       </div>
 
       <p style="padding-bottom: 25px; margin-bottom: 0px; font-size: 20px;">Call or Text: (954) 670-4118</p>
-      <script src="headerAnimation.js"></script>
      </footer>
    </main>
 
